Fix project source links overlapping layout

--- a/style/projects.css
+++ b/style/projects.css
@@ -227,6 +227,12 @@ figure {
     color: white;
 }
 
+.p-links {
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+}
+
 footer {
     background-color: black;
     color: white;
